test/src/e2e_vm_tests/test_programs/should_pass/language/zero_field_types/src/main.sw
script;

struct StructWithNoFields {}
enum EnumWithNoVariants {}

fn main() -> u64 {
    let unit_struct = StructWithNoFields {};
    10u64
}
