test/src/e2e_vm_tests/test_programs/should_fail/repeated_const/src/main.sw
script;

const X = 5;
//const X = 5;

fn main() -> u64 {
    let X = 4;
    4
//    X
}
